# pipeline

./: .gitignore  CMakeLists.txt
include/niragne/: pipeline.h
src/: main.cpp
